force-app/main/default/objects/Sprint__c/fields/A_End_Date__c.field-meta.xml
<CustomField>
    <fullName>A_End_Date__c</fullName>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>