force-app/main/default/objects/Sprint__c/fields/A_Str_Date__c.field-meta.xml
<CustomField>
    <fullName>A_Str_Date__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>