force-app/main/default/objects/Sprint__c/fields/Data_Release__c.field-meta.xml
<CustomField>
    <fullName>Data_Release__c</fullName>
    <label>Data Release</label>
    <type>Date</type>
</CustomField>