force-app/main/default/objects/Sprint__c/fields/FinalDateApproveHistories__c.field-meta.xml
<CustomField>
    <fullName>FinalDateApproveHistories__c</fullName>
    <description>Final date to approve histories for this sprints.</description>
    <label>Final Date to Approve Histories</label>
    <type>Date</type>
</CustomField>