force-app/main/default/objects/Sprint__c/fields/Latest_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Review_Date__c</fullName>
    <label>Latest Review Date</label>
    <type>Date</type>
</CustomField>