force-app/main/default/objects/Sprint__c/fields/P_End_Date__c.field-meta.xml
<CustomField>
    <fullName>P_End_Date__c</fullName>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>