force-app/main/default/objects/Sprint__c/fields/P_Str_Date__c.field-meta.xml
<CustomField>
    <fullName>P_Str_Date__c</fullName>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>