force-app/main/default/objects/Sprint__c/fields/PctComplete__c.field-meta.xml
<CustomField>
    <fullName>PctComplete__c</fullName>
    <formula>SprintDevelopedPoints__c / SprintEstimatedPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>