force-app/main/default/objects/Sprint__c/fields/PlannedRelease__c.field-meta.xml
<CustomField>
    <fullName>PlannedRelease__c</fullName>
    <label>Planned Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>