force-app/main/default/objects/Sprint__c/fields/PointsDayCompleteBurndown__c.field-meta.xml
<CustomField>
    <fullName>PointsDayCompleteBurndown__c</fullName>
    <formula>SprintEstimatedPoints__c
/ 

( 

CASE(MOD( P_Str_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( P_End_Date__c - P_Str_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( P_End_Date__c - P_Str_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( P_End_Date__c - P_Str_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( P_End_Date__c - P_Str_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( P_End_Date__c - P_Str_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( P_End_Date__c - P_Str_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( P_End_Date__c - P_Str_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( P_End_Date__c - P_Str_Date__c )/7)*5) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points by Day to Complete Burndown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>