force-app/main/default/objects/Sprint__c/fields/ProductBacklog__c.field-meta.xml
<CustomField>
    <fullName>ProductBacklog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this sprint is a Product Backlog.</description>
    <inlineHelpText>Check this box if this Sprint is a Product Backlog.</inlineHelpText>
    <label>Product Backlog?</label>
    <type>Checkbox</type>
</CustomField>