force-app/main/default/objects/Sprint__c/fields/Show_In_Test_Console__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Test_Console__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In Test Console</label>
    <type>Checkbox</type>
</CustomField>