force-app/main/default/objects/Sprint__c/fields/SprintDevelopedPoints__c.field-meta.xml
<CustomField>
    <fullName>SprintDevelopedPoints__c</fullName>
    <label>Sprint Developed Points</label>
    <summarizedField>Work__c.Points__c</summarizedField>
    <summaryFilterItems>
        <field>Work__c.Work_Status__c</field>
        <operation>equals</operation>
        <value>Done</value>
    </summaryFilterItems>
    <summaryForeignKey>Work__c.Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>