force-app/main/default/objects/Sprint__c/fields/SprintEstimatedPoints__c.field-meta.xml
<CustomField>
    <fullName>SprintEstimatedPoints__c</fullName>
    <label>Sprint Estimated Points</label>
    <summarizedField>Work__c.Points__c</summarizedField>
    <summaryForeignKey>Work__c.Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>