force-app/main/default/objects/Sprint__c/fields/SprintPointsComplete__c.field-meta.xml
<CustomField>
    <fullName>SprintPointsComplete__c</fullName>
    <formula>SprintEstimatedPoints__c -  SprintDevelopedPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint Points to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>