force-app/main/default/objects/Sprint__c/validationRules/AcEndDate_should_later_than_AcStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AcEndDate_should_later_than_AcStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>A_End_Date__c &lt; A_Str_Date__c</errorConditionFormula>
    <errorDisplayField>A_End_Date__c</errorDisplayField>
    <errorMessage>Actual End Date should not be earlier than Actual Start Date</errorMessage>
</ValidationRule>