force-app/main/default/objects/Sprint__c/validationRules/PlaEndDate_should_later_thanPlaStartdate.validationRule-meta.xml
<ValidationRule>
    <fullName>PlaEndDate_should_later_thanPlaStartdate</fullName>
    <active>true</active>
    <errorConditionFormula>P_End_Date__c &lt; P_Str_Date__c</errorConditionFormula>
    <errorDisplayField>P_End_Date__c</errorDisplayField>
    <errorMessage>Planned End Date should not be earlier than Planned Start Date</errorMessage>
</ValidationRule>