force-app/main/default/objects/Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>P_Str_Date__c</columns>
    <columns>P_End_Date__c</columns>
    <columns>SprintEstimatedPoints__c</columns>
    <columns>SprintDevelopedPoints__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>