force-app/main/default/objects/Sprint__c/listViews/Configura_o_Inicial_Product_Backlog.listView-meta.xml
<ListView>
    <fullName>Configura_o_Inicial_Product_Backlog</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductBacklog__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>(Configuração Inicial) Product Backlog</label>
</ListView>