force-app/main/default/objects/Sprint__c/listViews/Sprint_Planejado.listView-meta.xml
<ListView>
    <fullName>Sprint_Planejado</fullName>
    <columns>NAME</columns>
    <columns>P_Str_Date__c</columns>
    <columns>P_End_Date__c</columns>
    <columns>SprintEstimatedPoints__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductBacklog__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Product Backlog,Planned</value>
    </filters>
    <label>Sprints Planejados</label>
</ListView>