force-app/main/default/objects/Sprint__c/listViews/Sprints.listView-meta.xml
<ListView>
    <fullName>Sprints</fullName>
    <columns>NAME</columns>
    <columns>P_Str_Date__c</columns>
    <columns>P_End_Date__c</columns>
    <columns>SprintEstimatedPoints__c</columns>
    <columns>SprintDevelopedPoints__c</columns>
    <columns>PctComplete__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductBacklog__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Sprint em Andamento</label>
</ListView>